# ReproCare

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  setup.sh
api/: .dockerignore  Dockerfile  pyproject.toml
api/app/: __init__.py  db.py  llm.py  main.py  models.py  schemas.py  seed.py  whereby.py
app/: page.tsx
web/: .dockerignore  Dockerfile  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/create_room/: route.ts
web/app/api/intake_to_json/: route.ts
web/app/api/pharmacy_order/: route.ts
web/app/api/post_visit_explain/: route.ts
web/app/api/visit/: route.ts
web/app/api/visit/[visitId]/: route.ts
web/app/components/: Button.tsx  IntakeChat.tsx  PostVisitCards.tsx  Stepper.tsx
web/app/intake/: page.tsx
web/app/pharmacy/: page.tsx
web/app/success/: page.tsx
web/app/summary/: page.tsx
web/app/video-visit/: page.tsx
web/app/visit/[id]/: page.tsx
web/components/: Logo.tsx
web/lib/: api-helpers.ts
